# mongomancy

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflow/: tests.yml
.github/workflows/: tests.yml
src/mongomancy/: __init__.py  engine.py  mongo_errors.py  schema.py  types.py
tests/: mancy.py  test_engine.py  test_schema.py
